--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Pandas/article-resources-master.zip
 Scikit-learn/__pycache__/
 ~$Sklearn-UG.pptx
 Sklearn-UG/Reviews.csv
+Sklearn-UG/.vscode/.ropeproject/config.py
+Sklearn-UG/Datasets/mnist-original.mat
