--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Scikit-learn/__pycache__/
 Sklearn-UG/Reviews.csv
 Sklearn-UG/.vscode/.ropeproject/config.py
 Sklearn-UG/Datasets/mnist-original.mat
+~$Numpy.pptx
+~$Scikit learn.pptx
+X2604-K-11.png
